<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">きぃたり</string>
    <string name="title_home">ホーム</string>
    <string name="title_users">フォローしているユーザ</string>
    <string name="title_tags">フォローしているタグ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_description_1">ユーザ名は、Qiitaのユーザ設定ページ\nhttps://qiita.com/settings/account\nで確認することができます。</string>
    <string name="login_description_2">GitHubやTwitterのアカウントで登録した場合は、Qiita用のユーザ名が自動的に割り当てられているので、一度、確認してみてください。</string>

    <string name="user_name">ユーザ名</string>
    <string name="password">パスワード</string>
    <string name="login">ログイン</string>
    <string name="logout">ログアウト</string>
    <string name="search">検索</string>
    <string name="close">閉じる</string>
    <string name="loading">Loading…</string>
    <string name="icon">アイコン</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="confirm">確認</string>

    <string name="stock_article">ストックする</string>
    <string name="view_in_browser">ブラウザで見る</string>
    <string name="sure_logout">ログアウトしますか？</string>

    <string name="home_whats_new">新着投稿</string>
    <string name="home_stocks">ストック</string>
    <string name="home_self_topic">自分の投稿</string>

    <string name="stoked">(%d)</string>
    <string name="updated">%1$s が %2$s前に更新しました</string>
    <string name="posted">%1$s が %2$s前に投稿しました</string>
    <string name="search_result_for">%s の検索結果</string>
    <string name="search_result_title">検索: %s</string>
    <string name="read_more">もっと読む…</string>
    <string name="new_item">New!</string>
    <string name="updated_item">Updated!</string>
    <string name="no_article">投稿がありません。</string>
    <string name="rate_limit_remain">Rate limit remain: %d</string>

    <string name="err_login">ログイン失敗</string>
    <string name="err_response">通信失敗</string>
    <string name="err_empty_user_name">ユーザ名を入力してください。</string>
    <string name="err_empty_password">パスワードを入力してください。</string>

    <string name="dummy_description">Description</string>
    <string name="dummy_title">Title</string>
    <string name="dummy_count">0</string>
    <string name="dummy_tag">Tag</string>
</resources>
