<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        >
    <ImageView
            android:id="@+id/icon_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/icon"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            >
        <TextView
                style="@style/ItemDescription"
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_description"
                />
        <TextView
                style="@style/ItemTitle"
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_title"
                />
    </LinearLayout>

    <TextView
            style="@style/ItemDescription"
            android:id="@+id/stock_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_count"
            />
</LinearLayout>