<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        >
    <TextView
            style="@style/CaptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            />
    <EditText
            android:id="@+id/user_name_text"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:textColorHint="@color/caution_text"
            />
    <TextView
            style="@style/CaptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            />
    <EditText
            android:id="@+id/password_text"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:textColorHint="@color/caution_text"
            />
    <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/bg_qiita_button"
            />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login_description_1"
            android:textSize="7pt"
            android:textColor="#666"
            android:autoLink="web"
            android:lineSpacingExtra="2pt"
            />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/login_description_2"
            android:textSize="6pt"
            android:textColor="#666"
            android:autoLink="web"
            android:lineSpacingExtra="2pt"
            />
</LinearLayout>