<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="0dp"
        >

    <LinearLayout
            android:id="@+id/article_panel"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_topic_item"
            tools:ignore="UselessParent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                >

            <TextView
                    style="@style/ItemDescription"
                    android:id="@+id/description_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dummy_description"
                    />

            <TextView
                    style="@style/ItemDescription"
                    android:id="@+id/stock_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_count"
                    android:visibility="gone"
                    />
            <TextView
                    android:id="@+id/new_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_item"
                    android:textColor="#FF2539"
                    android:textSize="6pt"
                    android:textStyle="bold|italic"
                    />
            <TextView
                    android:id="@+id/updated_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updated_item"
                    android:textColor="#FFD439"
                    android:textSize="6pt"
                    android:textStyle="bold|italic"
                    />
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/icon_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_launcher"
                    android:contentDescription="@string/icon"/>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    >

                <TextView
                        style="@style/ItemTitle"
                        android:id="@+id/title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_title"
                        />
                <com.wefika.flowlayout.FlowLayout
                        android:id="@+id/tag_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/loading_view"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            >
        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/loading"
                android:textSize="9pt"
                android:textColor="#999999"
                />
    </LinearLayout>

    <Button
            android:id="@+id/more_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_qiita_button"
            android:text="@string/read_more"
            android:textColor="@color/white"
            />
</LinearLayout>